--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "jade": "^1.11.0",
+    "method-override": "^2.3.5",
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.17.3"
