--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/benjaminpettus/express-gallery#readme",
   "dependencies": {
-    "express": "^4.13.3",
+    "express": "^4.13.4",
     "jade": "^1.11.0",
     "method-override": "^2.3.5",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.17.3"
