--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sequelize": "^3.17.3"
   },
   "devDependencies": {
-    "faker": "^3.0.1"
+    "faker": "^3.0.1",
+    "morgan": "^1.6.1"
   }
 }
